--- a/templates/announcement/board_frame_page.html
+++ b/templates/announcement/board_frame_page.html
@@ -27,9 +27,6 @@
             width: 100%;
             background: lightgray;
             height: 100%;
-            /*overflow-y: scroll;*/
-            /*overflow-x: hidden;*/
-            /*overflow: auto;*/
         }
         
         #left {
@@ -42,6 +39,7 @@
             /*overflow-y: scroll;*/
             /*overflow-x: scroll;*/
             overflow: auto;
+            color: red;
         }
         
         #right {
@@ -56,7 +54,8 @@
         }
         
         #menu {
-            margin-left: -20px;
+            /*margin-left: -20px;*/
+            font
         }
     </style>
 
