--- a/templates/announcement/article.html
+++ b/templates/announcement/article.html
@@ -37,7 +37,7 @@
                     <a href="{{notification.image.url}}">{{notification.image}}</a> {% endif %}
                     <br>
                     {% if editable%}
-                    <a href="#" class="btn btn-success btn-sm">编辑</a>
+                    <a href="{% url 'notification_edit' notification.id %}" class="btn btn-success btn-sm">编辑</a>
                     {% endif %} 
                     <a href="#" class="btn btn-info btn-sm">联系作者</a>
                 </div>
