--- a/templates/announcement/article_list.html
+++ b/templates/announcement/article_list.html
@@ -49,7 +49,7 @@
                 </ul>
             </div>
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                <h1 class="page-header">{{n.category}}placehold</h1>
+                <h1 class="page-header">{{category}}</h1>
                 {% for n in notifications %}
                 <a class="a2" href="{% url 'notification' n.id %}"><h3>{{n.title}}</h3></a>
                 <p id="p1">{{n.content}}</p>
