change search page

--- a/announcement/templates/search/search1.html
+++ b/announcement/templates/search/search1.html
@@ -1,4 +1,4 @@
-
+{% extends 'board_frame_page.html' %} {% block center %}
 <div>
     <div class="row">
         <div class="col-lg-2"></div>
@@ -42,3 +42,4 @@
     </div>
     
 </div>
+{% endblock %}
