--- a/templates/announcement/article.html
+++ b/templates/announcement/article.html
@@ -39,7 +39,7 @@
                     {% if editable%}
                     <a href="{% url 'notification_edit' notification.id %}" class="btn btn-success btn-sm">编辑</a>
                     {% endif %} 
-                    <a href="#" class="btn btn-info btn-sm">联系作者</a>
+                    <a href="{% url 'board_index' %}" class="btn btn-info btn-sm">返回主页</a>
                 </div>
                 <p class="content-markdown">{{notification.content}}</p>
             </div>
