--- a/announcement/templates/search/search.html
+++ b/announcement/templates/search/search.html
@@ -1,5 +1,10 @@
-
-<div>
+<!DOCTYPE html> {% load staticfiles %}
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+    </head>
+    <body>
+    <div>
     <div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
@@ -42,3 +47,6 @@
     </div>
     
 </div>
+</body>
+</html>
+
