--- a/announcement/static/css/style.css
+++ b/announcement/static/css/style.css
@@ -124,3 +124,9 @@ h1 {
   border-color: black;
   border-width: 10px;
 }
+
+hr {
+  margin: 0px;
+  /*padding: 0px;*/
+  border: 2px border-style red;
+}
