--- a/announcement/templates/search/search.html
+++ b/announcement/templates/search/search.html
@@ -1,52 +1,62 @@
 <!DOCTYPE html> {% load staticfiles %}
 <html>
     <head>
+        <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+        <link href="{% static 'css/style.css' %}" rel="stylesheet">
     </head>
     <body>
-    <div>
-    <div class="row">
-        <div class="col-lg-2"></div>
-        <div class="col-lg-8">
-            <h2>全文搜索</h2>
-
-    <form method="get" action="">
-        <table>
-            {{ form.as_table }}
-            <tr>
-                <td> </td>
-                <td>
-                    <input type="submit" class="btn btn-success form-control" value="搜索">
-                </td>
-            </tr>
-        </table>
-
-        {% if query %}
-            <h3>搜索结果</h3>
-            <hr>
-            <ol>
-                {% for result in page.object_list %}
-                <li><a href="{{ result.object.get_absolute_url }}"><h4>{{ result.object }}</h4></a></li>
-                {% empty %}
-                <p>无结果.</p>
-                {% endfor %}
-            </ol>
-            {% if page.has_previous or page.has_next %}
-                <div>
-                    {% if page.has_previous %}<a href="?q={{ query }}&page={{ page.previous_page_number }}">{% endif %}« Previous{% if page.has_previous %}</a>{% endif %}
-                    |
-                    {% if page.has_next %}<a href="?q={{ query }}&page={{ page.next_page_number }}">{% endif %}Next »{% if page.has_next %}</a>{% endif %}
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8">
+                    <h2>全文搜索</h2>
+                    <form method="get" action="">
+                        <table>
+                            {{ form.as_table }}
+                            <tr>
+                                <td></td>
+                                <td>
+                                    <input type="submit" class="btn btn-success form-control" value="搜索">
+                                </td>
+                            </tr>
+                        </table>
+                        <h3>搜索结果</h3>
+                        <hr>
+                        {% if query %}
+                            <ol>
+                                {% for result in page.object_list %}
+                                <li>
+                                    <a href="{{ result.object.get_absolute_url }}"><h4>{{ result.object }}</h4></a>
+                                </li>
+                                {% empty %}
+                                <p>无结果.</p>
+                                {% endfor %}
+                            </ol>
+                            {% if page.has_previous or page.has_next %}
+                            <div>
+                                {% if page.has_previous %}
+                                    <a href="?q={{ query }}&page={{ page.previous_page_number }}">
+                                {% endif %}
+                                « Previous
+                                {% if page.has_previous %}</a>
+                                {% endif %}
+                                |
+                                {% if page.has_next %}
+                                    <a href="?q={{ query }}&page={{ page.next_page_number }}">
+                                {% endif %}
+                                Next »
+                                {% if page.has_next %}</a>{% endif %}
+                            </div>
+                            {% endif %}
+                        {% else %}
+                        {# Show some example queries to run, maybe query syntax, something else? #}
+                        {% endif %}
+                    </form>
                 </div>
-            {% endif %}
-        {% else %}
-            {# Show some example queries to run, maybe query syntax, something else? #}
-        {% endif %}
-    </form>
+            <div class="col-lg-2"></div>
         </div>
-        <div class="col-lg-2"></div>
     </div>
-    
-</div>
 </body>
 </html>
 
