--- a/templates/announcement/article.html
+++ b/templates/announcement/article.html
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col-md-2 col-lg-2"></div>
             <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
-                <div class="jumbotron">
+                <div class="jumbotron" id="j1">
                     <h1>{{notification.title}}</h1>
                     {{author}}{{notification.created_date}}
                     {% if notification.image %} 附件：
