代码高亮，修复附件bug

--- a/announcement/templates/search/search.html
+++ b/announcement/templates/search/search.html
@@ -19,6 +19,9 @@
                                 <td>
                                     <input type="submit" class="btn btn-success form-control" value="搜索">
                                 </td>
+                                <td>
+                                    <a href="{% url 'board_index' %}" class="btn btn-info form-control">返回主页</a>
+                                </td>
                             </tr>
                         </table>
                         <h3>搜索结果</h3>
