--- a/templates/announcement/article.html
+++ b/templates/announcement/article.html
@@ -5,15 +5,16 @@
     <meta charset="utf-8">
     <title>文章</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-
+    <link rel="stylesheet" type="text/css" href="{% static 'css/prism.css' %}">
     <script src="{% static 'js/jquery.min.js'%}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/markdown.js' %}"></script>
-    <script src="{% static 'js/to-markdown.js' %}"></script>
-    <script src="{% static 'js/bootstrap-markdown.js' %}"></script>
-    <script src="{% static 'js/bootstrap-markdown.fr.js' %}"></script>
-    <script src="{% static 'js/marked.min.js'%}"></script>
-    
+    <script src="{% static 'js/prism.js'%}"></script>
+    <!--<script src="{% static 'js/markdown.js' %}"></script>-->
+    <!--<script src="{% static 'js/to-markdown.js' %}"></script>-->
+    <!--<script src="{% static 'js/bootstrap-markdown.js' %}"></script>-->
+    <!--<script src="{% static 'js/bootstrap-markdown.fr.js' %}"></script>-->
+    <!--<script src="{% static 'js/marked.min.js'%}"></script>-->
+    <!--<script src="{% static 'js/myjs.js'%}"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $(".content-markdown").each(function () {
@@ -22,7 +23,8 @@
                 $(this).html(markedcontent)
             })
         })
-    </script>
+    </script>-->
+
 </head>
 
 <body>
@@ -41,11 +43,10 @@
                     {% endif %} 
                     <a href="{% url 'board_index' %}" class="btn btn-info btn-sm">返回主页</a>
                 </div>
-                <p class="content-markdown">{{notification.content}}</p>
-            </div>
+                {{notification.content_html|safe}}
+                </div>
             <div class="col-md-2 col-lg-2"></div>
         </div>
     </div>
 </body>
-
 </html>
