--- a/templates/announcement/article_list.html
+++ b/templates/announcement/article_list.html
@@ -27,6 +27,10 @@
                 </ul>
                 <hr>
                 {% endif %}
+                <ul class="nav nav-sidebar">
+                    <li><a  class="a1" href="{% url 'notification_category' 7 %}"><h4>系统升级相关内容</h4></a></li>
+                </ul>
+                <hr>
 
                 <ul class="nav nav-sidebar">
                     <li><a  class="a1" href="{% url 'board_index' %}"><h4>全部文章</h4></a></li>
@@ -65,6 +69,15 @@
                     {% endif %}
                 </ul>
                 <hr>
+                {% if user %}
+                <ul class="nav nav-sidebar">
+                    <li><a  class="a1" href="{% url 'notification_category' 8 %}"><h4>部门频道</h4></a></li>
+                </ul>
+                <ul class="nav nav-sidebar">
+                    <li><a  class="a1" href="{% url 'notification_category' 9 %}"><h4>个人频道</h4></a></li>
+                </ul>
+                <hr>
+                {% endif %}
                 {% if user %}
                 <ul class="nav nav-sidebar">
                     <li>
