--- a/templates/announcement/article_list.html
+++ b/templates/announcement/article_list.html
@@ -15,12 +15,13 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-3 col-md-2 sidebar">
-                <!--<li class=""><a href="#">全部 <span class="sr-only">(current)</span></a></li>-->
                 <ul class="nav nav-sidebar">
-                    <!--<li class="active" id="li1"><a class="a1" href="#"><h4>搜索</h4><span class="sr-only">(current)</span></a></li>-->
-                    <li><a  class="a1" href="{% url 'search_view' %}"><h4>搜索文章</h4></a></li>
+                    <li><a  class="a1" href="{% url 'board_index' %}"><h4>关于平台</h4></a></li>
                 </ul>
                 <hr>
+                <ul class="nav nav-sidebar">
+                    <li><a  class="a1" href="{% url 'search_view' %}"><h4>搜索文章</h4></a></li>
+                </ul>
                 {% if role == "editor" %}
                 <ul class="nav nav-sidebar">
                     <li><a  class="a1" href="{% url 'notification_create' %}"><h4>新建文章</h4></a></li>
@@ -29,11 +30,6 @@
                 {% endif %}
                 <ul class="nav nav-sidebar">
                     <li><a  class="a1" href="{% url 'notification_category' 6 %}"><h4>系统升级相关内容</h4></a></li>
-                </ul>
-                <hr>
-
-                <ul class="nav nav-sidebar">
-                    <li><a  class="a1" href="{% url 'board_index' %}"><h4>全部文章</h4></a></li>
                 </ul>
                 <ul class="nav nav-sidebar">
                     <li><a  class="a1" href="{% url 'notification_category' 1 %}"><h4>实名制</h4></a></li>
