--- a/templates/announcement/article_index.html
+++ b/templates/announcement/article_index.html
@@ -1,11 +1,158 @@
 <!DOCTYPE html> {% load staticfiles %}
 <html>
-    <head>
-        <meta charset="utf-8">
 
-    </head>
-    <body>
-        <h1>关于平台</h1>
-        <p></p>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+</head>
+
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-3 col-md-2 sidebar">
+                <ul class="nav nav-sidebar">
+                    <li>
+                        <a class="a1" href="{% url 'board_index' %}">
+                            <h4>关于平台</h4>
+                        </a>
+                    </li>
+                </ul>
+                <hr>
+                <ul class="nav nav-sidebar">
+                    <li>
+                        <a class="a1" href="{% url 'search_view' %}">
+                            <h4>搜索文章</h4>
+                        </a>
+                    </li>
+                </ul>
+                {% if role == "editor" %}
+                <ul class="nav nav-sidebar">
+                    <li>
+                        <a class="a1" href="{% url 'notification_create' %}">
+                            <h4>新建文章</h4>
+                        </a>
+                    </li>
+                </ul>
+                <hr> {% endif %}
+                <ul class="nav nav-sidebar">
+                    <li>
+                        <a class="a1" href="{% url 'notification_category' 6 %}">
+                            <h4>系统升级相关内容</h4>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="nav nav-sidebar">
+                    <li>
+                        <a class="a1" href="{% url 'notification_category' 1 %}">
+                            <h4>实名制</h4>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="nav nav-sidebar">
+                    <li>
+                        <a class="a1" href="{% url 'notification_category' 2 %}">
+                            <h4>营业受理</h4>
+                        </a>
+                    </li>
+                    {% if visible %}
+                    <li><a class="a1" href="">&nbsp&nbsp&nbsp爱销售</a></li>
+                    <li><a class="a1" href="">&nbsp&nbsp&nbsp集团4G</a></li>
+                    <li><a class="a1" href="">&nbsp&nbsp&nbspCRM</a></li>
+                    {% endif %}
+                </ul>
+                <ul class="nav nav-sidebar">
+                    <li>
+                        <a class="a1" href="{% url 'notification_category' 3 %}">
+                            <h4>产品资费</h4>
+                        </a>
+                    </li>
+                    {% if visible %}
+                    <li><a class="a1" href="">&nbsp&nbsp&nbsp销账</a></li>
+                    <li><a class="a1" href="">&nbsp&nbsp&nbspOOCP</a></li>
+                    {% endif %}
+                </ul>
+                <ul class="nav nav-sidebar">
+                    <li>
+                        <a class="a1" href="{% url 'notification_category' 4 %}">
+                            <h4>配置开通</h4>
+                        </a>
+                    </li>
+                    {% if visible %}
+                    <li><a class="a1" href="">&nbsp&nbsp&nbsp资源</a></li>
+                    <li><a class="a1" href="">&nbsp&nbsp&nbsp服开</a></li>
+                    <li><a class="a1" href="">&nbsp&nbsp&nbsp激活</a></li>
+                    {% endif %}
+                </ul>
+                <ul class="nav nav-sidebar">
+                    <li>
+                        <a class="a1" href="{% url 'notification_category' 5 %}">
+                            <h4>外线装维</h4>
+                        </a>
+                    </li>
+                    {% if visible %}
+                    <li><a class="a1" href="">&nbsp&nbsp&nbsp客调</a></li>
+                    <li><a class="a1" href="">&nbsp&nbsp&nbsp即销即通</a></li>
+                    {% endif %}
+                </ul>
+                <hr> {% if user %}
+                <ul class="nav nav-sidebar">
+                    <li>
+                        <a class="a1" href="{% url 'notification_category' 7 %}">
+                            <h4>部门频道</h4>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="nav nav-sidebar">
+                    <li>
+                        <a class="a1" href="{% url 'notification_category' 8 %}">
+                            <h4>个人频道</h4>
+                        </a>
+                    </li>
+                </ul>
+                <hr> {% endif %} {% if user %}
+                <ul class="nav nav-sidebar">
+                    <li>
+                        <a href="#" class="a1" data-toggle="dropdown">
+                            <h4>{{user.username}}<span class="caret"></span></h4>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{% url 'logout' %}">登出</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <hr> {% endif %}
+            </div>
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                <h1>关于平台</h1>
+                <p>知识管理平台中的内容根据一线人员的各种工作内容共分为： 系统升级、实名制、营业受理、产品资费、配置开通、外线装维六大类。 以下是对这六大类内容的简要说明：
+                </p>
+                <ol>
+                    <li>系统升级：</li>
+                    <p>省公司在每月第一个和最后一个周二晚会进行例行的系统升级，主要为上线新业务规则、新功能、新产品，bug修复等动作。按惯例系统升级前省公司将会把每次升级内容通过ITSM派发单下发至本地网。IT中心将会把其中与本地网有关的重点内容摘录后发布在这个版块，并将完整的升级内容列表发布，提供一线人员查看。</p>
+                    <li>实名制：</li>
+                    <p>实名制相关系统规则，公司业务规范等相关内容。</p>
+                    <li>营业受理：</li>
+                    <p>主要为在集团4G系统、iSale、CRM、销账、OOCP系统中各类业务场景的操作知识。各类异常信息、验证报错、系统提示的解释与处理方法。</p>
+                    <li>产品资费：</li>
+                    <p>各类产品、套餐、资费等信息的介绍。</p>
+                    <li>配置开通：</li>
+                    <p>综合资源、服开、激活等系统相关功能、操作等知识信息。</p>
+                    <li>外线装维：</li>
+                    <p>客调系统、爱装维、爱网格等外线相关系统知识与操作。</p>
+                </ol>
+                <h1>使用权限</h1>
+                <ol>
+                    <li>访客可以查看、搜索公开文章。</li>
+                    <li>普通用户可以查看、搜索公开文章与用户所属部门内部文章。</li>
+                    <li>编辑权限用户可以查看、新建、编辑公开与个人或部门私有文章。</li>
+                </ol>
+            </div>
+        </div>
+    </div>
+
+</body>
+
 </html>
