--- a/templates/announcement/article_index.html
+++ b/templates/announcement/article_index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-3 col-md-2 sidebar">
+            <div class="col-xs-3 col-sm-3 col-md-2 col-lg-2 sidebar">
                 <ul class="nav nav-sidebar">
                     <li>
                         <a class="a1" href="{% url 'board_index' %}">
@@ -130,7 +130,7 @@
                 <hr>
                 {% endif %}
             </div>
-            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            <div class="col-xs-3 col-xs-offset-3 col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 col-lg-10 col-lg-offset-2 main">
                 <h1>关于平台</h1>
                 <p>知识管理平台中的内容根据一线人员的各种工作内容共分为： 系统升级、实名制、营业受理、产品资费、配置开通、外线装维六大类。 以下是对这六大类内容的简要说明：
                 </p>
