--- a/templates/announcement/article.html
+++ b/templates/announcement/article.html
@@ -6,9 +6,8 @@
     <title>文章</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/prism.css' %}">
-    <script src="{% static 'js/jquery.min.js'%}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/prism.js'%}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    
     <!--<script src="{% static 'js/markdown.js' %}"></script>-->
     <!--<script src="{% static 'js/to-markdown.js' %}"></script>-->
     <!--<script src="{% static 'js/bootstrap-markdown.js' %}"></script>-->
@@ -33,7 +32,7 @@
             <div class="col-md-2 col-lg-2"></div>
             <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                 <div class="jumbotron" id="j1">
-                    <h1>{{notification.title}}</h1>
+                    <h2>{{notification.title}}</h2>
                     {{author}}{{notification.created_date}}
                     {% if notification.image %} 附件：
                     <a href="{{notification.image.url}}">{{notification.image}}</a> {% endif %}
@@ -48,5 +47,12 @@
             <div class="col-md-2 col-lg-2"></div>
         </div>
     </div>
+    
+    
+    
+    <script src="{% static 'js/jquery.min.js'%}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/prism.js'%}"></script>
+    <script src="{% static 'js/myjs.js' %}"></script>
 </body>
 </html>
