--- a/templates/announcement/article_list.html
+++ b/templates/announcement/article_list.html
@@ -6,15 +6,14 @@
     <title>内容列表</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    
     
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-3 col-md-2 sidebar">
+            <div class="col-xs-3 col-sm-3 col-md-2 col-lg-2 sidebar">
                 <ul class="nav nav-sidebar">
                     <li><a  class="a1" href="{% url 'board_index' %}"><h4>关于平台</h4></a></li>
                 </ul>
@@ -88,7 +87,7 @@
                 <hr>
                 {% endif %}
             </div>
-            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            <div class="col-xs-3 col-xs-offset-3 col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 col-lg-10 col-lg-offset-2 main">
                 <h1 class="page-header">{{category}}</h1>
                 {% for n in notifications %}
                 <a class="a2" href="{% url 'notification' n.id %}"><h3>{{n.title}}</h3></a>
@@ -97,5 +96,11 @@
             </div>
         </div>
     </div>
+
+
+
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/myjs.js' %}"></script>
 </body>
 </html>
