--- a/templates/announcement/article_post.html
+++ b/templates/announcement/article_post.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html> {% load staticfiles %}
 
 <html>
+
 <head>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/prism_okaidia.css' %}">
     <!--<link href="{% static 'css/style.css' %}" rel="stylesheet">-->
-    <script src="{% static 'js/jquery.min.js'%}"></script>
-    <script src="{% static 'js/prism_okaidia.js'%}"></script>
-    {{form.media}}
+
+    <!--{{form.media}}-->
     <!--编辑器尺寸，最大化-->
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-markdown.min.css' %}">
     <!--编辑器图标-->
     <link rel="stylesheet" type="text/css" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
-    <!--<script src="{% static 'js/bootstrap.min.js' %}"></script>-->
-    <!--<script src="{% static 'js/markdown.js' %}"></script>-->
-    <!--<script src="{% static 'js/to-markdown.js' %}"></script>-->
-    <script src="{% static 'js/bootstrap-markdown.js' %}"></script>
+
     <!--<script src="{% static 'js/bootstrap-markdown.fr.js' %}"></script>-->
 
     <!--<script type="text/javascript">
@@ -62,37 +59,49 @@
     </script>-->
 
 </head>
-<body>
-    
 
-<div class="container-fluid" id="center">
-    
-    <div class="row">
-        <div class="col-lg-2"></div>
-        <div class="col-lg-8">
-            <form action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
-                <div class="page-header">
-                    <h1>创建或编辑文章</h1>
-                </div>
-                {{form.title}}
-                <hr> {{form.content}}
-                <hr>
-                <div class="row">
-                    <div class="col-lg-3">{{form.category_id}}</div>
-                    <div class="col-lg-3">{{form.image}}</div>
-                    <div class="col-lg-3">
-                        <a href="{% url 'board_index' %}">
+<body>
+
+
+    <div class="container-fluid" id="center">
+
+        <div class="row">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8">
+                <form action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
+                    <div class="page-header">
+                        <h2>创建或编辑文章</h2>
+                    </div>
+                    {{form.title}}
+                    <hr> {{form.content}}
+                    <hr>
+                    <div class="row">
+                        <div class="col-lg-3">{{form.category_id}}</div>
+                        <div class="col-lg-3">{{form.image}}</div>
+                        <div class="col-lg-3">
+                            <a href="{% url 'board_index' %}">
                             <button type="button" class="btn btn-default form-control">返回</button>
                         </a>
+                        </div>
+                        <div class="col-lg-3">
+                            <button type="submit" class="btn btn-success form-control">发布</button>
+                        </div>
                     </div>
-                    <div class="col-lg-3">
-                        <button type="submit" class="btn btn-success form-control">发布</button>
-                    </div>
-                </div>
-            </form>
+                </form>
+            </div>
+            <div class="col-lg-2"></div>
         </div>
-        <div class="col-lg-2"></div>
     </div>
-</div>
+
+
+    <script src="{% static 'js/jquery.min.js'%}"></script>
+    <script src="{% static 'js/prism_okaidia.js'%}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <!--<script src="{% static 'js/markdown.js' %}"></script>-->
+    <!--<script src="{% static 'js/to-markdown.js' %}"></script>-->
+    <script src="{% static 'js/bootstrap-markdown.js' %}"></script>
+
+
 </body>
+
 </html>
