--- a/templates/announcement/article_post.html
+++ b/templates/announcement/article_post.html
@@ -77,7 +77,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-lg-3">{{form.category_id}}</div>
-                        <div class="col-lg-3">{{form.image}}</div>
+                        <div class="col-lg-3">{{form.attachment}}</div>
                         <div class="col-lg-3">
                             <a href="{% url 'board_index' %}">
                             <button type="button" class="btn btn-default form-control">返回</button>
