--- a/templates/announcement/article_post.html
+++ b/templates/announcement/article_post.html
@@ -4,69 +4,16 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/prism_okaidia.css' %}">
-    <!--<link href="{% static 'css/style.css' %}" rel="stylesheet">-->
-
-    <!--{{form.media}}-->
-    <!--编辑器尺寸，最大化-->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-markdown.min.css' %}">
-    <!--编辑器图标-->
-    <link rel="stylesheet" type="text/css" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
-
-    <!--<script src="{% static 'js/bootstrap-markdown.fr.js' %}"></script>-->
-
-    <!--<script type="text/javascript">
-        (function ($) {
-            $.fn.markdown.messages.zh = {
-                'Bold': "粗体",
-                'Italic': "斜体",
-                'Heading': "标题",
-                'URL/Link': "链接",
-                'Image': "图片",
-                'List': "列表",
-                'Unordered List': "无序列表",
-                'Ordered List': "有序列表",
-                'Code': "代码",
-                'Quote': "引用",
-                'Preview': "预览",
-                'strong text': "粗体",
-                'emphasized text': "强调",
-                'heading text': "标题",
-                'enter link description here': "输入链接说明",
-                'Insert Hyperlink': "URL地址",
-                'enter image description here': "输入图片说明",
-                'Insert Image Hyperlink': "图片URL地址",
-                'enter image title here': "在这里输入图片标题",
-                'list text here': "这里是列表文本",
-                'code text here': "这里输入代码",
-                'quote here': "这里输入引用文本"
-            };
-        }(jQuery));
-        $("#editor").markdown({
-            autofocus: true,
-            language: 'zh',
-        })
-    </script>-->
-    <!--<script src="{% static 'js/marked.min.js'%}"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $(".content-markdown").each(function () {
-                var content = $(this).text()
-                var markedcontent = marked(content)
-                $(this).html(markedcontent)
-            })
-        })
-    </script>-->
-
+    <link rel="stylesheet" type="text/css" href="{% static 'css/post.css' %}"> 
+    {{form.media}}
 </head>
 
 <body>
-
-
+    <!--<div class="container-fluid" id="center">-->
     <div class="container-fluid" id="center">
 
         <div class="row">
-            <div class="col-lg-2"></div>
+            <!--<div class="col-lg-2"></div>-->
             <div class="col-lg-8">
                 <form action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
                     <div class="page-header">
@@ -89,19 +36,12 @@
                     </div>
                 </form>
             </div>
-            <div class="col-lg-2"></div>
+            <!--<div class="col-lg-2"></div>-->
         </div>
     </div>
 
-
     <script src="{% static 'js/jquery.min.js'%}"></script>
-    <script src="{% static 'js/prism_okaidia.js'%}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <!--<script src="{% static 'js/markdown.js' %}"></script>-->
-    <!--<script src="{% static 'js/to-markdown.js' %}"></script>-->
-    <script src="{% static 'js/bootstrap-markdown.js' %}"></script>
-
-
 </body>
 
 </html>
